# FINKI

./: CMakeLists.txt  README.md  StrukturnoProgramiranje
APS/: README.md
APS/src/io/github/biv2101/Aud/Aud2/: BrojParni.java  DveNizi.java  SpojListi.java
APS/src/io/github/biv2101/Labs/Lab1/: Main.java  PushZero.java  ReverseWord.java
APS/src/io/github/biv2101/Labs/Lab2/: ArrayMeanWordLength.java  MysticalCardGame.java  SpecialSLLDelete.java
APS/src/io/github/biv2101/Labs/Lab3/: CountWordPairs.java  DLLBattalion.java  MiceHoles.java
APS/src/io/github/biv2101/Labs/Lab4/: ArithmeticExpression.java  SumOfAbsoluteDifferences.java  ZigZagSequence.java
APS/src/io/github/biv2101/Standard/: Array.java  DLL.java  DLLNode.java  SLL.java  SLLNode.java
APS/src/io/github/biv2101/VezbiPrv/: Bus.java  DeleteSLL.java  ExpressionEvaluator.java  LDS.java  ListaOdListi.java  card_trick.java
NP/: README.md
NP/src/io/github/biv2101/Aud/: BoxBox.java  MathClass.java
NP/src/io/github/biv2101/Labs/Lab1/: BankTester.java  IntegerArrayTester.java  RomanConverterTest.java
NP/src/io/github/biv2101/Labs/Lab2/: ContactsTester.java  DoubleMatrixTester.java
NP/src/io/github/biv2101/Labs/Lab3/: PizzaOrderTest.java
NP/src/io/github/biv2101/VezbiPrv/: ApplicantEvaluationTest.java  ArchiveStoreTest.java  ComponentTest.java  EquationTester.java  EvaluatorTest.java  F1Test.java  FileSystemTest.java  FrontPageTest.java  GenericFractionTest.java  LoadedCoinTest.java  LoggerTest.java  MinAndMax.java  MojDDVTest.java  RiskTester.java  RiskTester2.java  RuleTester.java  Shapes1Test.java  Shapes2Test.java  ShapesTest.java  ShoppingTest.java  SubtitlesTest.java  TaskSchedulerTest.java  TimesTest.java  TripleTest.java  WeatherStationTest.java
NP/src/io/github/biv2101/VezbiVtor/: AirportsTest.java  AuditionTest.java  BlockContainerTest.java  BooksTest.java  CanvasTest.java  CarTest.java  ClusterTest.java  CourseTest.java  DailyTemperatureTest.java  DeliveryAppTester.java  DiscountsTest.java  EventCalendarTest.java  FacultyTest.java  FileSystemTest.java  FilterAndSortTest.java  FootballTableTest.java  GenericCollectionTest.java  GenericMapTest.java  LabExercisesTest.java  LogsTester.java  MapSortingTest.java  MoviesTest.java  NamesTest.java  OnlinePaymentsTest.java  OnlineShopTest.java  ParkingTesting.java  PayrollSystemTest.java  PhoneBookTest.java  PostTester.java  QuizProcessorTest.java  RaceTest.java  StaduimTest.java  StreamingPlatform2.java  StudentRecordsTest.java  TasksManagerTest.java  TelcoTest2.java
OOP/: 10.cpp  17.cpp  19.cpp  2.cpp  3.cpp  8.c
OOP/Lab/1/: 1.c  2.c  3.c
OOP/Lab/2/: 1.cpp  2.cpp  3.cpp
OOP/Lab/3/: 1.cpp  2.cpp  3.cpp
OOP/Lab/4/: lab4_1.cpp  lab4_2.cpp
OOP/Lab/5/: kolokviumska.cpp
OOP/Lab/6/: 1.cpp  2.cpp  lab6_2.cpp
OOP/Lab/7/: 1.cpp  2.cpp
OOP/Lab/8/: 1.cpp  2.cpp
OOP/Lab/9/: 1.cpp  2.cpp  3.cpp
OOP/Vezbi_II_Kol/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  15.cpp  16.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
OOP/Vezbi_I_Kol/: 1.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.c  17.cpp  18.c  18.cpp  19.cpp  2.cpp  20.c  3.cpp  4.cpp  5.cpp  6.cpp  7.c  8.c  9.cpp
SP/Lab/1/: lab1_1.c  lab1_2.c  lab1_3.c
SP/Lab/10/: lab10_1.c  lab10_2.c  lab10_3.c
SP/Lab/2/: lab2_1.c  lab2_2.c  lab2_3.c
SP/Lab/3/: lab3_1.c  lab3_2.c  lab3_3.c
SP/Lab/4/: lab4_1.c  lab4_2.c  lab4_3.c  lab4_4.c
SP/Lab/5/: lab5_1.c  lab5_2.c  lab5_3.c
SP/Lab/6/: lab6_1.c  lab6_2.c  lab6_3.c  lab6_4.c
SP/Lab/7/: lab7_1.c  lab7_2.c  lab7_3.c  lab7_4.c
SP/Lab/8/: lab8_1.c  lab8_2.c  lab8_3.c
SP/Lab/9/: lab9_1.c  lab9_2.c  lab9_3.c
SP/Vezbi_II_Kol/: 2-1.c  2-10.c  2-11.c  2-12.c  2-13.c  2-14.c  2-15.c  2-16.c  2-17.c  2-18.c  2-19.c  2-2.c  2-3.c  2-4.c  2-5.c  2-6.c  2-7.c  2-8.c  2-9.c  add2-1.c  add2-10.c  add2-2.c  add2-3.c  add2-4.c  add2-6.c  add2-7.c  add2-9.c  shema.txt  ste1-2022.c  ste2-2022.c
SP/Vezbi_I_Kol/: 1  1.c  10.c  11.c  12.c  13.c  14.c  15.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  additional1_1.c  additional1_3.c  additional1_4.c  additional1_5.c  additional1_6.c  kol1_1.c  kol1_2.c  kol1_3.c  kol1_4.c
