cmake_minimum_required(VERSION 3.23)
project(FINKI C)

set(CMAKE_C_STANDARD 11)

add_executable(1 SP/Vezbi_I_Kol/1.c)
add_executable(2 SP/Vezbi_I_Kol/2.c)
add_executable(3 SP/Vezbi_I_Kol/3.c)
add_executable(4 SP/Vezbi_I_Kol/4.c)
add_executable(5 SP/Vezbi_I_Kol/5.c)
add_executable(6 SP/Vezbi_I_Kol/6.c)
add_executable(7 SP/Vezbi_I_Kol/7.c)
add_executable(8 SP/Vezbi_I_Kol/8.c)
add_executable(9 SP/Vezbi_I_Kol/9.c)
add_executable(10 SP/Vezbi_I_Kol/10.c)
add_executable(11 SP/Vezbi_I_Kol/11.c)
add_executable(12 SP/Vezbi_I_Kol/12.c)
add_executable(13 SP/Vezbi_I_Kol/13.c)
add_executable(14 SP/Vezbi_I_Kol/14.c)
add_executable(15 SP/Vezbi_I_Kol/15.c)
add_executable(kol1_1 SP/Vezbi_I_Kol/kol1_1.c)
add_executable(kol1_2 SP/Vezbi_I_Kol/kol1_2.c)
add_executable(kol1_3 SP/Vezbi_I_Kol/kol1_3.c)
add_executable(kol1_4 SP/Vezbi_I_Kol/kol1_4.c)
add_executable(lab1_1 SP/Lab/1/lab1_1.c)
add_executable(lab1_2 SP/Lab/1/lab1_2.c)
add_executable(lab1_3 SP/Lab/1/lab1_3.c)
add_executable(lab2_1 SP/Lab/2/lab2_1.c)
add_executable(lab2_2 SP/Lab/2/lab2_2.c)
add_executable(lab2_3 SP/Lab/2/lab2_3.c)
add_executable(lab3_1 SP/Lab/3/lab3_1.c)
add_executable(lab3_2 SP/Lab/3/lab3_2.c)
add_executable(lab3_3 SP/Lab/3/lab3_3.c)
add_executable(lab4_1 SP/Lab/4/lab4_1.c)
add_executable(lab4_2 SP/Lab/4/lab4_2.c)
add_executable(lab4_3 SP/Lab/4/lab4_3.c)
add_executable(lab4_4 SP/Lab/4/lab4_4.c)


