cmake_minimum_required(VERSION 3.23)
project(FINKI C)

set(CMAKE_C_STANDARD 11)

add_executable(1 SP/Vezbi_I_Kol/1.c)
add_executable(2 SP/Vezbi_I_Kol/2.c)
add_executable(3 SP/Vezbi_I_Kol/3.c)
add_executable(4 SP/Vezbi_I_Kol/4.c)
add_executable(5 SP/Vezbi_I_Kol/5.c)
add_executable(6 SP/Vezbi_I_Kol/6.c)
add_executable(7 SP/Vezbi_I_Kol/7.c)
add_executable(8 SP/Vezbi_I_Kol/8.c)
add_executable(9 SP/Vezbi_I_Kol/9.c)
add_executable(10 SP/Vezbi_I_Kol/10.c)
add_executable(11 SP/Vezbi_I_Kol/11.c)
add_executable(12 SP/Vezbi_I_Kol/12.c)
add_executable(13 SP/Vezbi_I_Kol/13.c)
add_executable(14 SP/Vezbi_I_Kol/14.c)
add_executable(15 SP/Vezbi_I_Kol/15.c)
add_executable(2-1 SP/Vezbi_II_Kol/2-1.c)
add_executable(2-2 SP/Vezbi_II_Kol/2-2.c)
add_executable(2-3 SP/Vezbi_II_Kol/2-3.c)
add_executable(2-4 SP/Vezbi_II_Kol/2-4.c)
add_executable(2-5 SP/Vezbi_II_Kol/2-5.c)
add_executable(2-6 SP/Vezbi_II_Kol/2-6.c)
add_executable(2-7 SP/Vezbi_II_Kol/2-7.c)
add_executable(2-8 SP/Vezbi_II_Kol/2-8.c)
add_executable(2-9 SP/Vezbi_II_Kol/2-9.c)
add_executable(2-10 SP/Vezbi_II_Kol/2-10.c)
add_executable(2-11 SP/Vezbi_II_Kol/2-11.c)
add_executable(2-12 SP/Vezbi_II_Kol/2-12.c)
add_executable(2-13 SP/Vezbi_II_Kol/2-13.c)
add_executable(2-14 SP/Vezbi_II_Kol/2-14.c)
add_executable(2-15 SP/Vezbi_II_Kol/2-15.c)
add_executable(2-16 SP/Vezbi_II_Kol/2-16.c)
add_executable(2-17 SP/Vezbi_II_Kol/2-17.c)
add_executable(2-18 SP/Vezbi_II_Kol/2-18.c)
add_executable(2-19 SP/Vezbi_II_Kol/2-19.c)
add_executable(add2-1 SP/Vezbi_II_Kol/add2-1.c)
add_executable(add2-2 SP/Vezbi_II_Kol/add2-2.c)
add_executable(add2-3 SP/Vezbi_II_Kol/add2-3.c)
add_executable(add2-4 SP/Vezbi_II_Kol/add2-4.c)
add_executable(add2-5 SP/Vezbi_II_Kol/add2-5.c)
add_executable(add2-6 SP/Vezbi_II_Kol/add2-6.c)
add_executable(add2-7 SP/Vezbi_II_Kol/add2-7.c)
add_executable(add2-8 SP/Vezbi_II_Kol/add2-8.c)
add_executable(add2-9 SP/Vezbi_II_Kol/add2-9.c)
add_executable(add2-10 SP/Vezbi_II_Kol/add2-10.c)
add_executable(ste1-2022 SP/Vezbi_II_Kol/ste1-2022.c)
add_executable(ste2-2022 SP/Vezbi_II_Kol/ste2-2022.c)
add_executable(kol1_1 SP/Vezbi_I_Kol/kol1_1.c)
add_executable(kol1_2 SP/Vezbi_I_Kol/kol1_2.c)
add_executable(kol1_3 SP/Vezbi_I_Kol/kol1_3.c)
add_executable(kol1_4 SP/Vezbi_I_Kol/kol1_4.c)
add_executable(additional1_2 SP/Vezbi_I_Kol/additional1_2.c)
add_executable(additional1_1 SP/Vezbi_I_Kol/additional1_1.c)
add_executable(additional1_3 SP/Vezbi_I_Kol/additional1_3.c)
add_executable(additional1_4 SP/Vezbi_I_Kol/additional1_4.c)
add_executable(additional1_5 SP/Vezbi_I_Kol/additional1_5.c)
add_executable(additional1_6 SP/Vezbi_I_Kol/additional1_6.c)
add_executable(lab1_1 SP/Lab/1/lab1_1.c)
add_executable(lab1_2 SP/Lab/1/lab1_2.c)
add_executable(lab1_3 SP/Lab/1/lab1_3.c)
add_executable(lab2_1 SP/Lab/2/lab2_1.c)
add_executable(lab2_2 SP/Lab/2/lab2_2.c)
add_executable(lab2_3 SP/Lab/2/lab2_3.c)
add_executable(lab3_1 SP/Lab/3/lab3_1.c)
add_executable(lab3_2 SP/Lab/3/lab3_2.c)
add_executable(lab3_3 SP/Lab/3/lab3_3.c)
add_executable(lab4_1 SP/Lab/4/lab4_1.c)
add_executable(lab4_2 SP/Lab/4/lab4_2.c)
add_executable(lab4_3 SP/Lab/4/lab4_3.c)
add_executable(lab5_1 SP/Lab/5/lab5_1.c)
add_executable(lab5_2 SP/Lab/5/lab5_2.c)
add_executable(lab5_3 SP/Lab/5/lab5_3.c)
add_executable(lab6_1 SP/Lab/6/lab6_1.c)
add_executable(lab6_2 SP/Lab/6/lab6_2.c)
add_executable(lab6_3 SP/Lab/6/lab6_3.c)
add_executable(lab7_1 SP/Lab/7/lab7_1.c)
add_executable(lab7_2 SP/Lab/7/lab7_2.c)
add_executable(lab7_3 SP/Lab/7/lab7_3.c)
add_executable(lab7_4 SP/Lab/7/lab7_4.c)
add_executable(lab8_1 SP/Lab/8/lab8_1.c)
add_executable(lab8_2 SP/Lab/8/lab8_2.c)
add_executable(lab8_3 SP/Lab/8/lab8_3.c)
add_executable(lab9_1 SP/Lab/9/lab9_1.c)
add_executable(lab9_2 SP/Lab/9/lab9_2.c)
add_executable(lab9_3 SP/Lab/9/lab9_3.c)
add_executable(lab10_1 SP/Lab/10/lab10_1.c)
add_executable(lab10_2 SP/Lab/10/lab10_2.c)
add_executable(lab10_3 SP/Lab/10/lab10_3.c)
